--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -194,20 +194,20 @@
                 // Se as vozes ainda não estiverem carregadas, adicionar um listener para carregá-las
                 if (voices.length === 0) {
                     window.speechSynthesis.onvoiceschanged = () => {
-                        voices = window.speechSynthesis.getVoices();
-                        usVoice = voices.find(voice => voice.lang === 'en-US');
+    let voices = window.speechSynthesis.getVoices();
+    let usVoice = voices.find(voice => voice.lang === 'en-US');
 
-                        if (usVoice) {
-                            let utterance = new SpeechSynthesisUtterance(text);
-                            utterance.voice = usVoice;
-                            utterance.lang = 'en-US';
-                            console.log("Speaking with voice after loading: ", usVoice.name);
-                            window.speechSynthesis.speak(utterance);
-                        } else {
-                            alert("Please enable an English voice in your speech synthesizer.");
-                            console.log("English voice not found after voices changed.");
-                        }
-                    };
+    if (usVoice) {
+        let utterance = new SpeechSynthesisUtterance(storyText);
+        utterance.voice = usVoice;
+        utterance.lang = 'en-US';
+        console.log("Speaking with voice after loading: ", usVoice.name);
+        window.speechSynthesis.speak(utterance);
+    } else {
+        alert("Please enable an English voice in your speech synthesizer.");
+        console.log("English voice not found after voices changed.");
+    }
+};
                 }
             }
         }
@@ -225,12 +225,12 @@
 
         // Adiciona o evento para interceptar o fechamento ou recarregamento da página
         window.addEventListener("beforeunload", function (event) {
-            console.log("beforeunload event triggered. Phase completed: ", phaseCompleted);
-            if (!phaseCompleted) {
-                event.preventDefault();
-                
-            }
-        });
+    console.log("beforeunload event triggered. Phase completed: ", phaseCompleted);
+    if (!phaseCompleted) {
+        event.preventDefault();
+        event.returnValue = "";
+    }
+});
 
         // Adiciona o evento de clique no botão Back
         document.addEventListener("DOMContentLoaded", () => {
