--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -188,6 +188,7 @@
                         if (usVoice) {
                             speakText(text, usVoice);
                         } else {
+                            speakText(text, voices[0]);
                             alert("To complete the activity, you must enable an English voice in your speech synthesizer.");
                             console.log("English voice not found in synthesizer.");
                         }
@@ -195,6 +196,7 @@
                 } else if (usVoice) {
                     speakText(text, usVoice);
                 } else {
+                    speakText(text, voices[0]);
                     alert("To complete the activity, you must enable an English voice in your speech synthesizer.");
                     console.log("English voice not found in synthesizer.");
                 }
