--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -14,7 +14,7 @@
     <script>
         // Configuração do Firebase
         var firebaseConfig = {
-            apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
+            apiKey: "API_KEY_HERE",
             authDomain: "hannahenglishcourse.firebaseapp.com",
             projectId: "hannahenglishcourse",
             storageBucket: "hannahenglishcourse.appspot.com",
@@ -31,6 +31,7 @@
         let storyTitle = "Hannah Story"; // Exemplo de título para o PDF
         let storyText = ""; // Variável que irá conter o texto da história
         let phaseCompleted = false; // Variável para verificar se a fase foi concluída
+        let alertShown = false; // Variável para garantir que a mensagem seja mostrada apenas uma vez
 
         // Função para verificar o role e exibir o botão PDF se o usuário for "professor" ou "proprietário"
         function checkUserRole() {
@@ -189,7 +190,10 @@
                             speakText(text, usVoice);
                         } else {
                             speakText(text, voices[0]);
-                            alert("To complete the activity, you must enable an English voice in your speech synthesizer.");
+                            if (!alertShown) {
+                                alert("To complete the activity, you must enable an English voice in your speech synthesizer.");
+                                alertShown = true;
+                            }
                             console.log("English voice not found in synthesizer.");
                         }
                     };
@@ -197,7 +201,10 @@
                     speakText(text, usVoice);
                 } else {
                     speakText(text, voices[0]);
-                    alert("To complete the activity, you must enable an English voice in your speech synthesizer.");
+                    if (!alertShown) {
+                        alert("To complete the activity, you must enable an English voice in your speech synthesizer.");
+                        alertShown = true;
+                    }
                     console.log("English voice not found in synthesizer.");
                 }
             }
