--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -166,7 +166,7 @@
         }
 
         // Função para iniciar ou parar a leitura do texto
-        function toggleSpeech(text) {
+        function toggleSpeech(text, buttonElement) {
             if (!('speechSynthesis' in window)) {
                 alert("Your browser does not support speech synthesis. Please enable it or use a compatible browser.");
                 return;
@@ -175,6 +175,7 @@
             if (window.speechSynthesis.speaking) {
                 window.speechSynthesis.cancel();
                 console.log("Speech synthesis stopped.");
+                buttonElement.src = 'businessman.png';
             } else {
                 // Tenta buscar vozes. Pode ser que as vozes ainda não estejam carregadas.
                 let voices = window.speechSynthesis.getVoices();
@@ -187,9 +188,9 @@
                         usVoice = voices.find(voice => voice.lang === 'en-US');
 
                         if (usVoice) {
-                            speakText(text, usVoice);
+                            speakText(text, usVoice, buttonElement);
                         } else {
-                            speakText(text, voices[0]);
+                            speakText(text, voices[0], buttonElement);
                             if (!alertShown) {
                                 alert("To complete the activity, you must enable an English voice in your speech synthesizer.");
                                 alertShown = true;
@@ -198,24 +199,28 @@
                         }
                     };
                 } else if (usVoice) {
-                    speakText(text, usVoice);
+                    speakText(text, usVoice, buttonElement);
                 } else {
-                    speakText(text, voices[0]);
+                    speakText(text, voices[0], buttonElement);
                     if (!alertShown) {
                         alert("To complete the activity, you must enable an English voice in your speech synthesizer.");
                         alertShown = true;
                     }
                     console.log("English voice not found in synthesizer.");
                 }
+                buttonElement.src = 'pause.png';
             }
         }
 
-        function speakText(text, voice) {
+        function speakText(text, voice, buttonElement) {
             let utterance = new SpeechSynthesisUtterance(text);
             utterance.voice = voice;
             utterance.lang = 'en-US';
             console.log("Speaking with voice: ", voice.name);
             window.speechSynthesis.speak(utterance);
+            utterance.onend = () => {
+                buttonElement.src = 'businessman.png';
+            };
         }
 
         // Função para interceptar a tentativa de sair da página
@@ -332,7 +337,7 @@
             width: 90px;
             height: 90px;
             cursor: pointer;
-            background-color: rgba(255, 255, 255, 0.8);
+            background-color: rgba(255, 255, 255, 0);
             border-radius: 50%;
             z-index: 10;
         }
@@ -411,7 +416,7 @@
             const businessmanImage = document.createElement('img');
             businessmanImage.src = 'businessman.png';
             businessmanImage.className = 'businessman';
-            businessmanImage.onclick = () => toggleSpeech(cardData.text);
+            businessmanImage.onclick = () => toggleSpeech(cardData.text, businessmanImage);
 
             cardElement.appendChild(businessmanImage);
             container.appendChild(cardElement);
