--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -208,7 +208,7 @@
                     }
                     console.log("English voice not found in synthesizer.");
                 }
-                buttonElement.src = 'pause.png';
+                buttonElement.src = 'pausa.png';
             }
         }
 
