--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -17,7 +17,7 @@
             apiKey: "API_KEY_HERE",
             authDomain: "hannahenglishcourse.firebaseapp.com",
             projectId: "hannahenglishcourse",
-            storageBucket: "hannahenglishcourse",
+            storageBucket: "hannahenglishcourse.appspot.com",
             messagingSenderId: "449818788486",
             appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
             measurementId: "G-07VVJG9LRS",
@@ -264,7 +264,15 @@
                         const { fase } = getParamsFromURL();
                         salvarProgressoAluno(user.uid, fase);
                     } else {
-                        console.log("No user is logged in.");
+                        console.log("No user is logged in. Trying to log in again.");
+                        // Tenta logar o usuário novamente
+                        firebase.auth().signInAnonymously().then(() => {
+                            console.log("User logged in anonymously to save progress.");
+                            const { fase } = getParamsFromURL();
+                            salvarProgressoAluno(firebase.auth().currentUser.uid, fase);
+                        }).catch((error) => {
+                            console.error("Error logging in anonymously: ", error);
+                        });
                     }
                 });
             }
