--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -14,7 +14,7 @@
     <script>
         // Configuração do Firebase
         var firebaseConfig = {
-            apiKey: "API_KEY_HERE",
+            apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
             authDomain: "hannahenglishcourse.firebaseapp.com",
             projectId: "hannahenglishcourse",
             storageBucket: "hannahenglishcourse.appspot.com",
