--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -304,6 +304,19 @@
         }
 
         init();
+
+        // Adiciona o evento de clique no botão Back
+        document.addEventListener("DOMContentLoaded", () => {
+            const backButton = document.querySelector("button#backButton");
+            if (backButton) {
+                backButton.addEventListener("click", () => {
+                    const { level, unit } = getParamsFromURL();
+                    const baseUrl = window.location.origin;
+                    const redirectUrl = `${baseUrl}/${level}/${unit}/index.html`;
+                    window.location.href = redirectUrl;
+                });
+            }
+        });
     </script>
 
     <style>
