--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -310,10 +310,19 @@
             const backButton = document.querySelector("button#backButton");
             if (backButton) {
                 backButton.addEventListener("click", () => {
-                    const { level, unit } = getParamsFromURL();
+                    const pathParts = window.location.pathname.split('/');
                     const baseUrl = window.location.origin;
-                    const redirectUrl = `${baseUrl}/${level}/${unit}/index.html`;
-                    window.location.href = redirectUrl;
+
+                    // Identifica o nível e a unidade do URL
+                    const level = pathParts.find(part => part.toLowerCase().startsWith('level'));
+                    const unit = pathParts.find(part => part.toLowerCase().startsWith('unit'));
+
+                    // Redireciona para a página listening.html da unidade correspondente
+                    if (level && unit) {
+                        window.location.href = `${baseUrl}/${level}/${unit}/listening.html`;
+                    } else {
+                        console.error("Nível ou unidade não identificados no URL.");
+                    }
                 });
             }
         });
