--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -329,7 +329,9 @@
                                 // Redireciona para a página listening.html da unidade correspondente
                                 window.location.href = `${baseUrl}/${level}/${unit}/listening.html`;
                             } else {
-                                alert("A próxima fase ainda não está concluída. Complete a fase atual antes de prosseguir.");
+                                if (confirm("The next phase is not completed. Do you wish to leave anyway or return to complete it?")) {
+                                    window.location.href = `${baseUrl}/${level}/${unit}/listening.html`;
+                                }
                             }
                         } else {
                             console.error("Nível ou unidade não identificados no URL ou usuário não está logado.");
@@ -468,7 +470,7 @@
 
     <script>
         let currentCardIndex = 0;
-        let cardsData = [];
-    </script>
+    let cardsData = [];
+</script>
 </body>
 </html>
