--- a/Atividades/StoryCards/index.html
+++ b/Atividades/StoryCards/index.html
@@ -78,19 +78,16 @@
 
             try {
                 if (fase === "end") {
-                    // Criar nova Level com Unit1/fase1
                     const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
                     await dbRef.child(nextLevel).set({});
                     await dbRef.child(`${nextLevel}/Unit1/fase1`).set(true);
                     console.log(`Nova Level ${nextLevel} criada com Unit1/fase1.`);
                 } else if (fase === "last") {
-                    // Criar nova Unit com fase1
                     const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
                     await dbRef.child(`${level}/${nextUnit}`).set({});
                     await dbRef.child(`${level}/${nextUnit}/fase1`).set(true);
                     console.log(`Nova Unit ${nextUnit} criada com fase1 em ${level}.`);
                 } else {
-                    // Criar próxima fase na mesma Unit
                     const nextFase = `fase${parseInt(fase) + 1}`;
                     await dbRef.child(`${level}/${unit}/${nextFase}`).set(true);
                     console.log(`Fase ${nextFase} criada em ${level}/${unit}.`);
@@ -102,58 +99,32 @@
             }
         }
 
-        function generatePDF() {
-            const { jsPDF } = window.jspdf;
-            const doc = new jsPDF();
-
-            // Adiciona a logo
-            doc.addImage('Logo.png', 'PNG', 85, 10, 40, 40);  // Posiciona a logo no PDF
-
-            // Campos de nome e data
-            doc.setFontSize(12);
-            doc.text("Name:_______________________________________________________  Date:_______________", 10, 60);
-
-            // Título
-            doc.setFontSize(20);
-            doc.text(storyTitle, 105, 80, { align: "center" });
-
-            // Texto da história
-            doc.setFontSize(12);
-            let y = 100;  // Posição inicial para o texto
-            const marginLeft = 10;
-            const maxLineWidth = 180;
-            const lineHeight = 10;
-
-            const splitText = doc.splitTextToSize(storyText, maxLineWidth);
-            splitText.forEach(line => {
-                if (y > 280) {
-                    doc.addPage();
-                    y = 20;
-                }
-                doc.text(line, marginLeft, y);
-                y += lineHeight;
-            });
-
-            doc.save("story.pdf");  // Salva o PDF com o nome 'story.pdf'
-        }
-
         async function loadContent() {
-            const response = await fetch('images.txt');
+            // Obtém os parâmetros level e unit da URL
+            const { level, unit } = getParamsFromURL();
+
+            // Caminho dinâmico para a pasta DataStory
+            const dataStoryPath = `../../${level}/${unit}/DataStory/`;
+
+            // Carrega o arquivo images.txt da pasta DataStory
+            const response = await fetch(`${dataStoryPath}images.txt`);
             const text = await response.text();
             const lines = text.split('\n');
+
             let cards = [];
             let currentImage = '';
             let currentText = '';
 
+            // Processa o arquivo images.txt
             lines.forEach(line => {
                 if (line.startsWith('#imagem')) {
                     if (currentImage && currentText) {
                         cards.push({ image: currentImage, text: currentText });
                     }
-                    currentImage = line.replace('#', '').trim();
+                    currentImage = line.replace('#', '').trim(); // Extrai o nome da imagem
                     currentText = '';
                 } else {
-                    currentText += line + ' ';
+                    currentText += line + ' '; // Acumula o texto associado
                 }
             });
 
@@ -161,182 +132,78 @@
                 cards.push({ image: currentImage, text: currentText });
             }
 
-            // Preenche storyText com o conteúdo da história para o PDF
+            // Preenche a variável global storyText com o conteúdo da história para o PDF
             storyText = cards.map(card => card.text).join('\n\n');
+
+            // Atualiza os caminhos das imagens para incluir o diretório correto
+            cards = cards.map(card => ({
+                ...card,
+                image: `${dataStoryPath}${card.image}.png` // Caminho completo da imagem
+            }));
+
             return cards;
         }
 
-        // Função para iniciar ou parar a leitura do texto
-        function toggleSpeech(text, buttonElement) {
-            if (!('speechSynthesis' in window)) {
-                alert("Your browser does not support speech synthesis. Please enable it or use a compatible browser.");
-                return;
-            }
-
-            if (window.speechSynthesis.speaking) {
-                window.speechSynthesis.cancel();
-                console.log("Speech synthesis stopped.");
-                buttonElement.src = 'businessman.png';
-            } else {
-                // Tenta buscar vozes. Pode ser que as vozes ainda não estejam carregadas.
-                let voices = window.speechSynthesis.getVoices();
-                let usVoice = voices.find(voice => voice.lang === 'en-US');
-
-                if (!usVoice && voices.length === 0) {
-                    // Se nenhuma voz for carregada, adiciona um listener para tentar novamente quando as vozes estiverem prontas
-                    window.speechSynthesis.onvoiceschanged = () => {
-                        voices = window.speechSynthesis.getVoices();
-                        usVoice = voices.find(voice => voice.lang === 'en-US');
-
-                        if (usVoice) {
-                            speakText(text, usVoice, buttonElement);
-                        } else {
-                            speakText(text, voices[0], buttonElement);
-                            if (!alertShown) {
-                                alert("To complete the activity, you must enable an English voice in your speech synthesizer.");
-                                alertShown = true;
-                            }
-                            console.log("English voice not found in synthesizer.");
-                        }
-                    };
-                } else if (usVoice) {
-                    speakText(text, usVoice, buttonElement);
-                } else {
-                    speakText(text, voices[0], buttonElement);
-                    if (!alertShown) {
-                        alert("To complete the activity, you must enable an English voice in your speech synthesizer.");
-                        alertShown = true;
-                    }
-                    console.log("English voice not found in synthesizer.");
-                }
-                buttonElement.src = 'pause.png';
-            }
-        }
-
-        function speakText(text, voice, buttonElement) {
-            let utterance = new SpeechSynthesisUtterance(text);
-            utterance.voice = voice;
-            utterance.lang = 'en-US';
-            console.log("Speaking with voice: ", voice.name);
-            window.speechSynthesis.speak(utterance);
-            utterance.onend = () => {
-                buttonElement.src = 'businessman.png';
-            };
-        }
-
-        // Função para alternar entre texto e imagem no card ao clicar nele
-        function toggleView() {
-            showText = !showText;
-            document.getElementById("toggleButton").innerText = showText ? "See the story" : "Read the story";
-            displayCard(currentCardIndex);
-        }
-
-        // Função para exibir o card atual
         function displayCard(index) {
             const container = document.getElementById('cardsContainer');
             container.innerHTML = '';
             const cardData = cardsData[index];
             const cardElement = document.createElement('div');
             cardElement.className = 'card active';
-            cardElement.onclick = () => toggleView(); // Adiciona o evento de clique para alternar entre imagem e texto
+            cardElement.onclick = () => toggleView(); // Alternar entre texto e imagem
 
             if (showText) {
                 cardElement.innerHTML = `<div class="card-text"><p>${cardData.text}</p></div>`;
             } else {
-                cardElement.innerHTML = `<img src="images/${cardData.image}.png" alt="Image">`;
+                cardElement.innerHTML = `<img src="${cardData.image}" alt="Image">`;
             }
 
             const businessmanImage = document.createElement('img');
             businessmanImage.src = 'businessman.png';
             businessmanImage.className = 'businessman';
             businessmanImage.onclick = (event) => {
-                event.stopPropagation(); // Impede o clique no card de acionar o evento de alternar imagem/texto
+                event.stopPropagation(); // Impede o clique no card de alternar
                 toggleSpeech(cardData.text, businessmanImage);
             };
 
             cardElement.appendChild(businessmanImage);
             container.appendChild(cardElement);
 
-            // Verifica se é o último card
-            if (index === cardsData.length - 1) {
-                firebase.auth().onAuthStateChanged(function(user) {
-                    if (user) {
-                        const { fase } = getParamsFromURL();
-                        salvarProgressoAluno(user.uid, fase);
-                    } else {
-                        console.log("No user is logged in. Trying to log in again.");
-                        // Tenta logar o usuário novamente
-                        firebase.auth().signInAnonymously().then(() => {
-                            console.log("User logged in anonymously to save progress.");
-                            const { fase } = getParamsFromURL();
-                            salvarProgressoAluno(firebase.auth().currentUser.uid, fase);
-                        }).catch((error) => {
-                            console.error("Error logging in anonymously: ", error);
-                        });
-                    }
-                });
-            }
-
             // Atualiza botões de navegação
             document.getElementById('prevBtn').style.display = (index === 0) ? 'none' : 'block';
             document.getElementById('nextBtn').style.display = (index === cardsData.length - 1) ? 'none' : 'block';
         }
 
-        // Função para exibir o próximo card
+        function toggleView() {
+            showText = !showText;
+            document.getElementById("toggleButton").innerText = showText ? "See the story" : "Read the story";
+            displayCard(currentCardIndex);
+        }
+
         function showNextCard() {
             currentCardIndex = (currentCardIndex + 1) % cardsData.length;
             console.log("Showing next card. Current index: ", currentCardIndex);
             displayCard(currentCardIndex);
         }
 
-        // Função para exibir o card anterior
         function showPreviousCard() {
             currentCardIndex = (currentCardIndex - 1 + cardsData.length) % cardsData.length;
             console.log("Showing previous card. Current index: ", currentCardIndex);
             displayCard(currentCardIndex);
         }
 
-        // Função para inicializar a página com o primeiro card
-        async function init() {
-            cardsData = await loadContent();
-            console.log("Cards data loaded: ", cardsData);
-            displayCard(0);
-        }
-
-        init();
-
-        // Adiciona o evento de clique no botão Back
         document.addEventListener("DOMContentLoaded", () => {
             const backButton = document.querySelector("button#backButton");
             if (backButton) {
-                backButton.addEventListener("click", async () => {
-                    const pathParts = window.location.pathname.split('/');
+                backButton.addEventListener("click", () => {
+                    const { level, unit } = getParamsFromURL();
                     const baseUrl = window.location.origin;
 
-                    // Identifica o nível e a unidade do URL
-                    const level = pathParts.find(part => part.toLowerCase().startsWith('level'));
-                    const unit = pathParts.find(part => part.toLowerCase().startsWith('unit'));
-
-                    // Verifica se a próxima fase está concluída no banco de dados
-                    firebase.auth().onAuthStateChanged(async function(user) {
-                        if (user && level && unit) {
-                            const uid = user.uid;
-                            const dbRef = firebase.database().ref(`usuarios/${uid}/progresso/${level}/${unit}/fase2`);
-                            const snapshot = await dbRef.once('value');
-                            const isPhaseCompleted = snapshot.val();
-
-                            if (isPhaseCompleted) {
-                                // Redireciona para a página listening.html da unidade correspondente
-                                window.location.href = `${baseUrl}/${level}/${unit}/listening.html`;
-                            } else {
-                                if (confirm("The next phase is not completed. Do you wish to leave anyway or return to complete it?")) {
-                                    window.location.href = `${baseUrl}/${level}/${unit}/listening.html`;
-                                }
-                            }
-                        } else {
-                            console.error("Nível ou unidade não identificados no URL ou usuário não está logado.");
-                        }
-                    });
+                    if (level && unit) {
+                        window.location.href = `${baseUrl}/${level}/${unit}/index.html`;
+                    } else {
+                        console.error("Nível ou unidade não identificados.");
+                    }
                 });
             }
         });
@@ -386,8 +253,8 @@
             align-items: center;
             justify-content: center;
             margin: 20px auto;
-            padding: 20px 40px 20px 20px; /* Espaçamento à direita para o ícone */
-            background-color: #f0f8ff; /* Fundo azul claro */
+            padding: 20px 40px 20px 20px;
+            background-color: #f0f8ff;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             width: 80%;
@@ -400,10 +267,10 @@
             display: flex;
         }
         .card img {
-            max-width: 100%; /* Garante que a imagem não ultrapasse o tamanho do cartão */
+            max-width: 100%;
             height: auto;
             border-radius: 10px;
-            margin-bottom: 10px; /* Espaçamento abaixo da imagem */
+            margin-bottom: 10px;
         }
         .card p {
             font-size: 1.5em;
@@ -413,14 +280,11 @@
         }
         .businessman {
             position: absolute;
-            top: 10px; /* Posiciona no topo */
-            right: 10px; /* Posiciona na borda direita */
+            top: 10px;
+            right: 10px;
             width: 90px;
             height: 90px;
             cursor: pointer;
-            background-color: transparent;
-            border-radius: 50%;
-            z-index: 10;
         }
         button {
             margin: 20px;
@@ -470,7 +334,105 @@
 
     <script>
         let currentCardIndex = 0;
-    let cardsData = [];
-</script>
+        let cardsData = [];
+
+        function generatePDF() {
+            const { jsPDF } = window.jspdf;
+            const doc = new jsPDF();
+
+            // Adiciona a logo
+            doc.addImage('Logo.png', 'PNG', 85, 10, 40, 40); // Posiciona a logo no PDF
+
+            // Campos de nome e data
+            doc.setFontSize(12);
+            doc.text("Name:_______________________________________________________  Date:_______________", 10, 60);
+
+            // Título
+            doc.setFontSize(20);
+            doc.text(storyTitle, 105, 80, { align: "center" });
+
+            // Texto da história
+            doc.setFontSize(12);
+            let y = 100; // Posição inicial para o texto
+            const marginLeft = 10;
+            const maxLineWidth = 180;
+            const lineHeight = 10;
+
+            const splitText = doc.splitTextToSize(storyText, maxLineWidth);
+            splitText.forEach(line => {
+                if (y > 280) {
+                    doc.addPage();
+                    y = 20;
+                }
+                doc.text(line, marginLeft, y);
+                y += lineHeight;
+            });
+
+            doc.save("story.pdf"); // Salva o PDF com o nome 'story.pdf'
+        }
+
+      function toggleSpeech(text, buttonElement) {
+    if (!('speechSynthesis' in window)) {
+        alert("Your browser does not support speech synthesis. Please enable it or use a compatible browser.");
+        return;
+    }
+
+    if (window.speechSynthesis.speaking) {
+        window.speechSynthesis.cancel();
+        console.log("Speech synthesis stopped.");
+        buttonElement.src = 'businessman.png';
+    } else {
+        let voices = window.speechSynthesis.getVoices();
+        let usVoice = voices.find(voice => voice.lang === 'en-US');
+
+        if (!usVoice && voices.length === 0) {
+            window.speechSynthesis.onvoiceschanged = () => {
+                voices = window.speechSynthesis.getVoices();
+                usVoice = voices.find(voice => voice.lang === 'en-US');
+
+                if (usVoice) {
+                    speakText(text, usVoice, buttonElement);
+                } else {
+                    speakText(text, voices[0], buttonElement);
+                    if (!alertShown) {
+                        alert("To complete the activity, you must enable an English voice in your speech synthesizer.");
+                        alertShown = true;
+                    }
+                    console.log("English voice not found in synthesizer.");
+                }
+            };
+        } else if (usVoice) {
+            speakText(text, usVoice, buttonElement);
+        } else {
+            speakText(text, voices[0], buttonElement);
+            if (!alertShown) {
+                alert("To complete the activity, you must enable an English voice in your speech synthesizer.");
+                alertShown = true;
+            }
+            console.log("English voice not found in synthesizer.");
+        }
+        buttonElement.src = 'pause.png';
+    }
+}
+
+function speakText(text, voice, buttonElement) {
+    let utterance = new SpeechSynthesisUtterance(text);
+    utterance.voice = voice;
+    utterance.lang = 'en-US';
+    console.log("Speaking with voice: ", voice.name);
+    window.speechSynthesis.speak(utterance);
+    utterance.onend = () => {
+        buttonElement.src = 'businessman.png';
+    };
+}
+    </script>
+
+    <style>
+        /* Styles remain consistent and functional */
+        .card img {
+            max-width: 100%; /* Keeps images responsive */
+        }
+    </style>
 </body>
 </html>
+
