--- a/Atividades/StoryCards/index.html
+++ b/Atividades/StoryCards/index.html
@@ -104,7 +104,7 @@
             const { level, unit } = getParamsFromURL();
 
             // Caminho dinâmico para a pasta DataStory
-            const dataStoryPath = `../../${level}/${unit}/DataStory/`;
+            const dataStoryPath = `../../../../${level}/${unit}/DataStory/`;
 
             // Carrega o arquivo images.txt da pasta DataStory
             const response = await fetch(`${dataStoryPath}images.txt`);
