--- a/Atividades/StoryCards/index.html
+++ b/Atividades/StoryCards/index.html
@@ -63,13 +63,13 @@
 
         // Função para identificar Level, Unit e fase atual pelo URL
         function getParamsFromURL() {
-            const urlParams = new URLSearchParams(window.location.search);
-            const fase = urlParams.get('fase');
-            const pathParts = window.location.pathname.split('/');
-            const level = pathParts.find(part => part.startsWith('Level'));
-            const unit = pathParts.find(part => part.startsWith('Unit'));
-            return { level, unit, fase };
-        }
+    const urlParams = new URLSearchParams(window.location.search);
+    const level = urlParams.get('level'); // Obtém o 'level' do URL
+    const unit = urlParams.get('unit');  // Obtém o 'unit' do URL
+    const fase = urlParams.get('fase');  // Obtém o 'fase' do URL
+    console.log("URL Parameters - Level:", level, "Unit:", unit, "Fase:", fase); // Debug
+    return { level, unit, fase };
+}
 
         // Função para salvar progresso no Firebase com todas as regras
         async function salvarProgressoAluno(uid, fase) {
