--- a/Atividades/StoryCards/index.html
+++ b/Atividades/StoryCards/index.html
@@ -107,15 +107,17 @@
         return [];
     }
 
-    // Subir dois níveis e acessar a pasta DataStory dinamicamente
+    // Construir o caminho dinâmico
     const dataStoryPath = `../../${level}/${unit}/DataStory/`;
+    console.log("Generated DataStory Path:", dataStoryPath); // Debug
 
     try {
-        // Busca o arquivo images.txt
         const response = await fetch(`${dataStoryPath}images.txt`);
         if (!response.ok) throw new Error(`Failed to fetch images.txt from ${dataStoryPath}`);
         
         const text = await response.text();
+        console.log("Fetched Content:", text); // Debug
+
         const lines = text.split('\n');
 
         let cards = [];
@@ -140,19 +142,19 @@
 
         storyText = cards.map(card => card.text).join('\n\n');
 
-        // Atualiza os caminhos das imagens para incluir o diretório correto
+        // Atualiza os caminhos das imagens
         cards = cards.map(card => ({
             ...card,
             image: `${dataStoryPath}${card.image}.png`
         }));
 
+        console.log("Final Cards Data:", cards); // Debug
         return cards;
     } catch (error) {
         console.error("Error loading content:", error);
         return [];
     }
 }
-
 
         function displayCard(index) {
             const container = document.getElementById('cardsContainer');
@@ -203,20 +205,22 @@
         }
 
         document.addEventListener("DOMContentLoaded", () => {
-            const backButton = document.querySelector("button#backButton");
-            if (backButton) {
-                backButton.addEventListener("click", () => {
-                    const { level, unit } = getParamsFromURL();
-                    const baseUrl = window.location.origin;
+    const backButton = document.querySelector("button#backButton");
+    if (backButton) {
+        backButton.addEventListener("click", () => {
+            const { level, unit } = getParamsFromURL();
+            const baseUrl = window.location.origin;
 
-                    if (level && unit) {
-                        window.location.href = `${baseUrl}/${level}/${unit}/index.html`;
-                    } else {
-                        console.error("Nível ou unidade não identificados.");
-                    }
-                });
+            if (level && unit) {
+                const destination = `${baseUrl}/${level}/${unit}/index.html`;
+                console.log("Navigating to:", destination); // Debug
+                window.location.href = destination;
+            } else {
+                console.error("Nível ou unidade não identificados.");
             }
         });
+    }
+});
     </script>
 
     <style>
