--- a/Atividades/StoryCards/index.html
+++ b/Atividades/StoryCards/index.html
@@ -145,7 +145,7 @@
         // Atualiza os caminhos das imagens
         cards = cards.map(card => ({
             ...card,
-            image: `${dataStoryPath}${card.image}.png`
+           image: `${dataStoryPath}images/${card.image}.png`
         }));
 
         console.log("Final Cards Data:", cards); // Debug
